--- a/public/index.html
+++ b/public/index.html
@@ -8,31 +8,92 @@
     <title>HairStyle salon</title>
 </head>
 <body>
-    <div class="header">
-        <nav class="navbar">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-content" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a href="#" class="navbar-brand col-xs-5"><img src="img/logo.png" alt="zizurz"></a>
-                </div>
-                
-                <div class="collapse navbar-collapse" id="nav-content">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Hairstyles</a></li>
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Logo"></a>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-content"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+                </button>
             </div>
-        </nav>
+            <div class="collapse navbar-collapse" id="nav-content">
+                <ul class="nav navbar-nav">
+                    <li><a href="#">HOME</a>
+                    </li>
+                    <li><a href="#">ABOUT</a>
+                    </li>
+                    <li><a href="#">HAIRSTYLES</a>
+                    </li>
+                    <li><a href="#">NEWS</a>
+                    </li>
+                    <li><a href="#">CONTACT</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <article>
+                    <div class="article-img">
+                        <img src="img/hairstyle17.jpg" alt="Hairstyle 17">
+                    </div>
+                    <h2>Best hairstylist</h2>
+                    <p>Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free!</p>
+                </article>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <article>
+                    <div class="article-img">
+                        <img src="img/hairstyle18.jpg" alt="Hairstyle 18">
+                    </div>
+                    <h2>Featured Hairstylists</h2>
+                    <p>But if you don’t find any website template you can use, you can try our Free Web Design service and tell us all about it. Maybe you’re looking for something different, something special.</p>
+                </article>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <article>
+                    <div class="article-img">
+                        <img src="img/hairstyle19.jpg" alt="Hairstyle 19">
+                    </div>
+                    <h2>Hair Care</h2>
+                    <p>You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the Forums.</p>
+                </article>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <article>
+                    <div class="article-img">
+                        <img src="img/hairstyle20.jpg" alt="Hairstyle 20">
+                    </div>
+                    <h2>We “Hair” You</h2>
+                    <p>Looking for more templates? Just browse through all our Free Website Templates and find what you’re looking for. But if you don’t find any website template you can use
+                        , you can try our Free Web Design service and tell us all about it.</p>
+                </article>
+            </div>
+        </div>
+
+        <div class="row .info-block">
+            <div class="col-xs-12 block-cite">
+                <div class="block-title">
+                    Hairstyle
+                </div>
+                <p>This website template has been designed by Free Website Templates for you, for free. You can replace all this text with your own text. You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the Forums.</p>
+                <p class="author">Mike M.</p>
+            </div>
+        </div>
+
     </div>
+
+
+
+
     <script src="assets/jquery/dist/jquery.js"></script>
     <script src="assets/bootstrap/dist/js/bootstrap.js"></script>
 </body>
