--- a/public/index.html
+++ b/public/index.html
@@ -79,11 +79,11 @@
             </div>
         </div>
 
-        <div class="row .info-block">
+        <div class="row info-block">
             <div class="col-xs-12 block-cite">
-                <div class="block-title">
+                <h1 class="block-title">
                     Hairstyle
-                </div>
+                </h1>
                 <p>This website template has been designed by Free Website Templates for you, for free. You can replace all this text with your own text. You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the Forums.</p>
                 <p class="author">Mike M.</p>
             </div>
