pass to pug and sass parts

--- a/public/index.html
+++ b/public/index.html
@@ -1,134 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>HairStyle salon</title>
-</head>
-<body>
-    <nav class="navbar navbar-default">
+    <meta name="viewport" content="width=device-width, iitial-scale=1">
+    <link rel="stylesheet" href="../assets/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>HairStyle Salon</title>
+  </head>
+  <body>
+    <div class="container-fluid"></div>
+    <!-- HEADER-->
+    <div class="header">
+      <nav class="navbar navbar-default">
         <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Logo"></a>
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-content"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse" id="nav-content">
-                <ul class="nav navbar-nav">
-                    <li><a href="#">HOME</a>
-                    </li>
-                    <li><a href="#">ABOUT</a>
-                    </li>
-                    <li><a href="#">HAIRSTYLES</a>
-                    </li>
-                    <li><a href="#">NEWS</a>
-                    </li>
-                    <li><a href="#">CONTACT</a>
-                    </li>
-                </ul>
-            </div>
+          <div class="navbar-header"><a class="navbar-brand" href="#"><img src="../img/logo.png" alt="Logo"></a>
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#nav-content"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+          </div>
+          <div class="collapse navbar-collapse" id="nav-content">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">HOME</a></li>
+              <li><a href="#">ABOUT</a></li>
+              <li><a href="#">HAIRSTYLES</a></li>
+              <li><a href="#">NEWS</a></li>
+              <li><a href="#">CONTACT</a></li>
+            </ul>
+          </div>
         </div>
-    </nav>
-    
+      </nav>
+    </div>
+    <!-- HEADER END-->
     <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-6">
-                <article>
-                    <div class="article-img">
-                        <img src="img/hairstyle17.jpg" alt="Hairstyle 17">
-                    </div>
-                    <h2>Best hairstylist</h2>
-                    <p>Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free!</p>
-                </article>
-            </div>
-            <div class="col-xs-12 col-sm-6">
-                <article>
-                    <div class="article-img">
-                        <img src="img/hairstyle18.jpg" alt="Hairstyle 18">
-                    </div>
-                    <h2>Featured Hairstylists</h2>
-                    <p>But if you don’t find any website template you can use, you can try our Free Web Design service and tell us all about it. Maybe you’re looking for something different, something special.</p>
-                </article>
-            </div>
-            <div class="col-xs-12 col-sm-6">
-                <article>
-                    <div class="article-img">
-                        <img src="img/hairstyle19.jpg" alt="Hairstyle 19">
-                    </div>
-                    <h2>Hair Care</h2>
-                    <p>You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the Forums.</p>
-                </article>
-            </div>
-            <div class="col-xs-12 col-sm-6">
-                <article>
-                    <div class="article-img">
-                        <img src="img/hairstyle20.jpg" alt="Hairstyle 20">
-                    </div>
-                    <h2>We “Hair” You</h2>
-                    <p>Looking for more templates? Just browse through all our Free Website Templates and find what you’re looking for. But if you don’t find any website template you can use
-                        , you can try our Free Web Design service and tell us all about it.</p>
-                </article>
-            </div>
-        </div>
-
-        <div class="row info-block inverted">
-            <div class="info-block-head">Featured</div>
-            <div class="row">
-                <img src="img/featured.jpg" alt="Girl">
-                <h1>Hair, I just met you</h1>
-            </div>
-            <div>
-                <p class="col-xs-12">Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them. You can use them to design websites for clients, so long as you agree with the Terms of Use.</p>
-
-                <p class="col-xs-12">You can even remove all our links if you want to. Looking for more templates? Just browse through all our Free Website Templates and find what you’re looking for. But if you don’t find any website template you can use, you can try our Free Web Design service and tell us all about it. Maybe you’re looking for something different, something special.</p>
-
-                <p class="col-xs-12">And we love the challenge of doing something different and something special. If you’re experiencing issues and concerns about this website template, join the discussion on our forum and meet other people in the community who share the same interests with you. Version 13.</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-12 col-sm-6">
-                <div class="info-block">
-                    <div class="info-block-head">Hairstyle</div>
-                    <p>This website template has been designed by Free Website Templates for you, for free. You can replace all this text with your own text. You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the Forums.</p>
-                    <p class="author">Mike M.</p>
-                </div>
-            </div>
-
-            <div class="col-xs-12 col-sm-6">
-                <div class="info-block on-right">
-                    <img src="img/skinhead.png" alt="skinhead">
-                    <p class="bold">Are you losing your hair?</p>
-                    <p class="bold">Let us help you in bringing</p>
-                    <p class="bold">back your confidence.</p>
-                    <p class="bold">Call Us at 1800-0000-0000</p>
-                </div>
-            </div>
-        </div>
+      <div class="row"></div>
     </div>
-
-    <div class="container-fluid footer">
-        <div class="container">
-            <div class="row social">
-                <div>
-                    <a href="#" id="tweeter">tweeter</a>
-                    <a href="#" id="facebook">facebook</a>
-                    <a href="#" id="googleplus">googleplus</a>
-                    <a href="#" id="pinterest">pinterest</a>
-                </div>
-            </div>
-            <div class="row copyright">
-                <p class="col-xs-12">copyright 2023 &copy; zizurz | all rights reserved.</p>
-            </div>
-        </div>
-    </div>
-
-
-
-
-    <script src="assets/jquery/dist/jquery.js"></script>
-    <script src="assets/bootstrap/dist/js/bootstrap.js"></script>
-</body>
+  </body>
 </html>
