--- a/public/index.html
+++ b/public/index.html
@@ -5,32 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../assets/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Changa+One" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <title>HairStyle Salon</title>
   </head>
   <body>
-    <div class="container-fluid"></div>
-    <!-- HEADER-->
-    <div class="header">
-      <nav class="navbar navbar-default">
-        <div class="container">
-          <div class="navbar-header"><a class="navbar-brand" href="#"><img src="../img/logo.png" alt="Logo"></a>
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#nav-content"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+    <div class="container-fluid">
+      <!-- HEADER-->
+      <div class="header">
+        <nav class="navbar navbar-default">
+          <div class="container">
+            <div class="navbar-header"><a class="navbar-brand" href="#"><img src="../img/logo.png" alt="Logo"></a>
+              <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#nav-content"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+            </div>
+            <div class="collapse navbar-collapse" id="nav-content">
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">hairstyles</a></li>
+                <li><a href="#">news</a></li>
+                <li><a href="#">contact</a></li>
+              </ul>
+            </div>
           </div>
-          <div class="collapse navbar-collapse" id="nav-content">
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">home</a></li>
-              <li><a href="#">about</a></li>
-              <li><a href="#">hairstyles</a></li>
-              <li><a href="#">news</a></li>
-              <li><a href="#">contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+        </nav>
+      </div>
+      <!-- HEADER END-->
     </div>
-    <!-- HEADER END-->
     <div class="container">
       <div class="row hidden-xs">
         <div class="col-sm-12 slider"><img src="../img/great-hairstyle.jpg" alt="Great hairstyle">
@@ -93,7 +92,7 @@
           </div>
         </div>
         <div class="col-xs-12 col-sm-6">
-          <div class="info-block on-right"><img src="../img/skinhead.jpg" alt="skinhead">
+          <div class="info-block on-right"><img src="../img/skinhead.png" alt="skinhead">
             <p class="bold">Are you losing your hair?</p>
             <p class="bold">Let us help you in bringing</p>
             <p class="bold">back your confidence.</p>
